# code-web-app-review

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  test_main.http
.github/: PULL_REQUEST_TEMPLATE.md
codereview_agent/app/: main.py  run.py
codereview_agent/common/: __init__.py  exception_handlers.py  exceptions.py  messages.py  response.py
codereview_agent/common/exception/: __init__.py  custom_internal_server_exception.py  error_codes.py  exception_handlers.py  exceptions.py
codereview_agent/review/: config.py
codereview_agent/review/api/: openapi_docs.py  review_router.py  router.py
codereview_agent/review/models/: ReviewRequest.py  __init__.py  review_data.py  review_examples.py  review_metrics.py  suggestion.py
codereview_agent/review/schemas/: __init__.py  review_request.py  review_response.py
codereview_agent/review/service/: __init__.py  claude_client.py  review_service.py
docs/reviews/: 20250926_review.md
tests/: test_review_service.py
