

[tool.poetry]
name = "code-review-agent"
version = "0.1.0"
description = "AI-based code review API with FastAPI"
authors = ["seona <noreply@codereview.local>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = "^0.22.0"
pydantic = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"